--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.3.0",
+    "google-map-react": "^2.2.1",
     "mdb-react-ui-kit": "^6.1.0",
     "mdb-ui-kit": "^6.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
