--- a/react-app/package.json
+++ b/react-app/package.json
@@ -19,7 +19,8 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-responsive-masonry": "^2.1.7",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-use-cart": "^1.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
