--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "cors": "^2.8.5",
     "google-map-react": "^2.2.1",
     "mdb-react-ui-kit": "^6.1.0",
     "mdb-ui-kit": "^6.4.0",
